# Library_Design_tools

./: .gitignore  Classical_Library_Design_by_nbr_probes.py  README.md  functions.py  input_parameters.json  pyproject.toml  requirements_dev.txt
Initial_Output/By_Nber_Probes_withRTs/Library_Design_Results/20240226_0947/: 1_Library_details.txt  (+1 more)
Initial_Output/By_locus_length/With_Barcodes/: input_parameters.json
Initial_Output/By_locus_length/With_RTs/: input_parameters.json
Library_Design_Results/20240226_1700/: 1_Library_details.txt  2_Full_sequence_Only.txt  3_Library_Summary.csv  4-OutputParameters.json
Library_Design_Results/20240522_154247/: 1_Library_details.txt  2_Full_sequence_Only.txt  3_Library_summary.csv  4-OutputParameters.json
Library_Design_Results/20240522_154419/: 1_Library_details.txt  2_Full_sequence_Only.txt  3_Library_summary.csv  4-OutputParameters.json
src/: input_parameters.json  library_design.py
src/core/: app_gui.py  args.py  data_function.py  design_process.py  function.py  gui_function.py  lib_design.py
src/models/: Locus.py  gui.py  interface.py  library.py  locus.py  tooltip.py
src/modules/: data_function.py  data_import_fonction.py  data_import_function.py  functions_DEPRECATED.py
src/resources/: chr3L.bed  input_parameters.json  tooltip_text.json
tests/: test_args.py  test_data_function.py  test_library_design.py  test_library_methods.py  test_locus_methods.py  tests_data_function.py  tests_data_import_function.py  tests_library_design.py  tests_library_methods.py  tests_locus_methods.py
tests/resources/: chr3L.bed
(+7 files in other folders)
